--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
   z-index: 99;
   position: fixed;
   top: 0;
-  height: 80px;
+  height: 70px;
   width: 100%;
   /* margin: 2px; */
   border-radius: 10px;
@@ -33,6 +33,8 @@ body {
   background: -webkit-linear-gradient(to right, #e7e9bb, #403b4a);
   background: linear-gradient(to right, #e7e9bb, #403b4a);
   /* position: relative; */
+  padding-bottom: 70px;
+  border-bottom: solid 2px white;
 }
 
 .navbar-brand {
@@ -40,8 +42,13 @@ body {
 }
 
 #UserInput {
-  height: 50px;
-  width: 150%;
+  height: 35px;
+  width: 550%;
+}
+
+#submitBtn {
+  height: 35px;
+  width: 50%;
 }
 
 main {
@@ -50,14 +57,15 @@ main {
 }
 
 .container {
-  width: 100%;
-  height: 100%;
-  margin-top: 20px;
+  width: auto;
+  height: auto;
+
   justify-content: center;
 }
 
 #title {
-  margin: 20px;
+  margin-top: 10%;
+  margin-bottom: -10%;
 }
 
 #UserContainer {
@@ -79,29 +87,29 @@ main {
   grid-template-columns: repeat(3, 8fr);
   column-gap: 10px;
   row-gap: 2em;
-  margin-bottom: 80px;
   margin-top: 80px;
   overflow: hidden;
 }
 
 #OutPutContainer img {
-  margin-bottom: 20px;
   height: auto;
   width: 99%;
-  /* background-image: url("landscape.jpg"); */
+  background: #fffefe84;
   background-repeat: no-repeat;
   padding: auto;
   max-width: 100%;
   object-fit: contain;
-  /* background: #f1eeeeb4; */
   border: #d9d1d16b solid 3px;
   border-radius: 20px;
   display: flex;
-  margin-bottom: 40px;
   justify-content: center;
   transition: 0.5s ease-in-out;
   border: solid rgb(255, 248, 234) 2px;
-  margin-top: 145px;
+  margin-top: 150px;
+  aspect-ratio: 3/2;
+  object-fit: contain;
+  margin-bottom: 5px;
+  filter: drop-shadow(0 0 0.75rem rgb(48, 43, 44));
 }
 
 #OutPutContainer img:hover {
@@ -162,8 +170,10 @@ main {
   }
 
   .navbar {
-    height: 15%;
-    margin-bottom: 45%;
+    height: 20%;
+    margin-bottom: 5%;
+    padding-bottom: 50px;
+    border-bottom: solid 2px white;
   }
 
   .navbar-brand {
@@ -182,29 +192,36 @@ main {
     font-size: 10px;
     height: 35px;
     width: 20%;
-    margin: 13px 9px;
+    margin: 12px 9px;
+  }
+
+  #title {
+    margin-top: 50%;
   }
 
   #OutPutContainer {
     justify-content: center;
-    margin: 10px;
     overflow: hidden;
     position: relative;
     margin: 0 auto;
     height: auto;
     display: grid;
-    margin-top: 135px;
-    grid-template-columns: repeat(1, 1fr);
+    margin-top: 15px;
+    margin-bottom: 50%;
+    grid-template-columns: repeat(1, 10fr);
   }
 
   #OutPutContainer img {
-    height: 80%;
-    width: 100%;
+    height: 52%;
+    max-width: 100%;
+    margin-bottom: -10px;
+    background-color: #e7e9bb;
   }
 
   #OutPutContainer video {
     height: 80%;
     /* width: 100%; */
+    background-color: #e7e9bb;
   }
 }
 
@@ -218,7 +235,8 @@ main {
     height: auto;
     display: grid;
     margin-top: 30px;
-    grid-template-columns: repeat(3, 10fr);
+
+    grid-template-columns: repeat(3, -80px);
   }
 
   #OutPutContainer video {
