--- a/style.css
+++ b/style.css
@@ -64,18 +64,25 @@ main {
 }
 
 #title {
-  margin-top: 10%;
-  margin-bottom: -10%;
+  margin-top: 12%;
+  /* margin-bottom: -15%; */
 }
 
-#UserContainer {
+#clearbtn {
+  padding: 5px;
+  border-radius: 8px;
+  margin-bottom: 50px;
+  /* margin: 20px; */
+}
+
+/* #UserContainer {
   display: block;
   margin-top: 50px;
   margin-bottom: 80px;
   align-items: center;
   text-align: center;
   justify-content: center;
-}
+} */
 
 #OutPutContainer {
   width: 100%;
@@ -87,7 +94,7 @@ main {
   grid-template-columns: repeat(3, 8fr);
   column-gap: 10px;
   row-gap: 2em;
-  margin-top: 80px;
+  margin-top: 280px;
   overflow: hidden;
 }
 
@@ -105,7 +112,6 @@ main {
   justify-content: center;
   transition: 0.5s ease-in-out;
   border: solid rgb(255, 248, 234) 2px;
-  margin-top: 150px;
   aspect-ratio: 3/2;
   object-fit: contain;
   margin-bottom: 5px;
@@ -124,20 +130,16 @@ main {
   width: 99%;
   max-width: 100%;
   object-fit: contain;
-  border: #d9d1d16b solid 3px;
+  background-color: #fbfffbce;
   border-radius: 20px;
   display: flex;
-  margin-bottom: 40px;
+  margin-bottom: 90px;
   justify-content: center;
-  border: solid rgb(255, 248, 234) 2px;
+  /* border: solid rgb(255, 248, 234) 2px; */
   display: grid;
   grid-template-columns: repeat(3, 8fr);
-  column-gap: 10px;
-  row-gap: 2em;
-  /* margin-top: 30%; */
-  margin-bottom: 30%;
   transition: 0.5s ease-in-out;
-  margin-top: 145px;
+  margin-top: 75px;
 }
 
 #OutPutContainer video:hover {
@@ -220,7 +222,7 @@ main {
 
   #OutPutContainer video {
     height: 80%;
-    /* width: 100%; */
+    margin-top: 40px;
     background-color: #e7e9bb;
   }
 }
@@ -243,6 +245,3 @@ main {
     justify-content: center;
   }
 }
-
-
-
